--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
         "lint:fix": "eslint . --fix"
     },
     "dependencies": {
+      "body-parser": "^1.20.3",
         "commitlint": "^19.7.1",
         "ejs": "^3.1.10",
-        "express": "^4.21.2"
+        "express": "^4.21.2",
+        "typescript": "^5.7.3"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.7.1",
@@ -27,6 +29,8 @@
         "husky": "^9.1.7",
         "nodemon": "^3.1.9",
         "prettier": "^3.5.1",
-        "typescript-eslint": "^8.24.1"
+        "typescript-eslint": "^8.24.1",
+        "@types/body-parser": "^1.19.5",
+        "@types/express": "^5.0.0"
     }
 }
