--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
     "nodemon": "^3.1.9"
   }
 }
