--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
         "@commitlint/cli": "^19.7.1",
         "@commitlint/config-conventional": "^19.7.1",
         "@eslint/js": "^9.20.0",
+        "@types/body-parser": "^1.19.5",
+        "@types/express": "^5.0.0",
         "eslint": "^9.20.1",
         "eslint-plugin-react": "^7.37.4",
         "globals": "^15.15.0",
         "husky": "^9.1.7",
         "nodemon": "^3.1.9",
         "prettier": "^3.5.1",
-        "typescript-eslint": "^8.24.1",
-        "@types/body-parser": "^1.19.5",
-        "@types/express": "^5.0.0"
+        "typescript-eslint": "^8.24.1"
     }
 }
