--- a/.github/workflows/ESLint.yml
+++ b/.github/workflows/ESLint.yml
@@ -27,4 +27,4 @@ jobs:
         run: npm install
 
       - name: Run ESLint
-        run: npm run lint
+        run: npx eslint src --config eslint.config.mjs --ignore-path .gitignore
