--- a/.github/workflows/ESLint.yml
+++ b/.github/workflows/ESLint.yml
@@ -1,30 +1,30 @@
 name: Lint Codebase
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    push:
+        branches:
+            - main
+    pull_request:
+        branches:
+            - main
 
 jobs:
-  eslint:
-    name: Run ESLint
-    runs-on: ubuntu-latest
+    eslint:
+        name: Run ESLint
+        runs-on: ubuntu-latest # plus rapide que windows-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          cache: "npm"
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 22.13.0
+                  cache: "npm"
 
-      - name: Install dependencies
-        run: npm install
+            - name: Install dependencies
+              run: npm install
 
-      - name: Run ESLint
-        run: npx eslint src --config eslint.config.mjs --ignore-path .gitignore
+            - name: Run ESLint
+              run: npx eslint src --config eslint.config.mjs # force l'utilisation de eslint.config.mjs
