--- a/.github/workflows/ESLint.yml
+++ b/.github/workflows/ESLint.yml
@@ -21,7 +21,7 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: 22.13.0
-                  cache: "npm"
+                  cache: "npm" # accélére les installations
 
             - name: Install dependencies
               run: npm install
