--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
         "prepare": "husky",
         "format": "prettier --write .",
         "lint": "eslint .",
-        "lint:fix": "eslint . --fix"
+        "lint:fix": "eslint . --fix",
+        "test": "vitest",
+        "test:watch": "vitest --watch",
+        "test:coverage": "vitest --coverage",
+        "test:e2e": "playwright test"
     },
     "dependencies": {
         "body-parser": "^1.20.3",
@@ -22,14 +26,18 @@
         "@commitlint/cli": "^19.7.1",
         "@commitlint/config-conventional": "^19.7.1",
         "@eslint/js": "^9.20.0",
+        "@playwright/test": "^1.50.1",
         "@types/body-parser": "^1.19.5",
         "@types/express": "^5.0.0",
+        "@types/node": "^22.13.4",
+        "c8": "^10.1.3",
         "eslint": "^9.20.1",
         "eslint-plugin-react": "^7.37.4",
         "globals": "^15.15.0",
         "husky": "^9.1.7",
         "nodemon": "^3.1.9",
         "prettier": "^3.5.1",
-        "typescript-eslint": "^8.24.1"
+        "typescript-eslint": "^8.24.1",
+        "vitest": "^3.0.6"
     }
 }
