--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "npx tsc && node dist/index.js",
+        "debug": "npx tsc && node --inspect-brk dist/index.js",
         "dev": "nodemon dist/index.js",
         "compile": "npx tsc",
         "prepare": "husky",
@@ -20,8 +21,7 @@
         "body-parser": "^1.20.3",
         "commitlint": "^19.7.1",
         "ejs": "^3.1.10",
-        "express": "^4.21.2",
-        "typescript": "^5.7.3"
+        "express": "^4.21.2"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.7.1",
@@ -38,6 +38,7 @@
         "husky": "^9.1.7",
         "nodemon": "^3.1.9",
         "prettier": "^3.5.1",
+        "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.1",
         "vitest": "^3.0.6"
     }
