--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "test:e2e": "playwright test"
     },
     "dependencies": {
+        "@sentry/node": "^9.2.0",
         "body-parser": "^1.20.3",
         "commitlint": "^19.7.1",
         "ejs": "^3.1.10",
